--- a/app/src/main/res/layout/fragment_menu_note.xml
+++ b/app/src/main/res/layout/fragment_menu_note.xml
@@ -35,8 +35,8 @@
             android:id="@+id/buttonSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="25dp"
-            android:paddingRight="25dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:layout_alignParentRight="true"
             android:layout_toLeftOf="@id/labelTitle"
             android:background="@drawable/button"
@@ -47,7 +47,22 @@
             android:textColor="@color/white"
             android:minHeight="40dp"/>
 
+        <TextView
+            android:id="@+id/emptyMessage"
+            android:layout_below="@id/labelSubtitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:text="@string/message_no_data"
+            android:textColor="@color/red_light"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:visibility="gone"/>
+
     </RelativeLayout>
+
 
     <ListView
         android:id="@+id/listNote"
