--- a/app/src/main/res/layout/fragment_menu_note.xml
+++ b/app/src/main/res/layout/fragment_menu_note.xml
@@ -18,7 +18,7 @@
             android:text="@string/title_note"
             android:textColor="@color/white"
             android:textSize="30sp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="5dp"
             android:textAppearance="?android:textAppearanceMedium"
             android:textStyle="bold"/>
 
@@ -43,9 +43,9 @@
             android:layout_gravity="center_horizontal"
             android:text="@string/label_button_create_note"
             android:textStyle="bold"
-            android:textAppearance="?android:textAppearanceMedium"
+            android:textAppearance="?android:textAppearanceSmall"
             android:textColor="@color/white"
-            android:minHeight="40dp"/>
+            android:minHeight="35dp"/>
 
         <TextView
             android:id="@+id/emptyMessage"
