change input stream reader char array with append each line

--- a/app/src/main/res/layout/list_note_item.xml
+++ b/app/src/main/res/layout/list_note_item.xml
@@ -39,6 +39,7 @@
         android:layout_marginRight="5dp"
         android:paddingBottom="10dp"
         android:text="@string/dummy_date_sort"
+        android:textStyle="bold"
         android:textColor="@color/gray"
         android:textSize="12sp"/>
 
